--- a/Spotify-MLOps/builder_tool/Dockerfile
+++ b/Spotify-MLOps/builder_tool/Dockerfile
@@ -1,9 +1,15 @@
+# ---------- Base Image ----------
 FROM python:3.10-slim
+
+# ---------- Working Directory ----------
 WORKDIR /workspace
 
+# ---------- Copy and Install Dependencies ----------
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# ---------- Copy Executor Script ----------
 COPY pipeline_executor.py .
 
-ENTRYPOINT ["python", "pipeline_executor.py"]
+# ---------- Entry Point ----------
+ENTRYPOINT ["python", "/workspace/pipeline_executor.py"]
