--- a/Spotify-MLOps/builder_tool/Dockerfile
+++ b/Spotify-MLOps/builder_tool/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.10-slim
-WORKDIR /workspace
+WORKDIR /usr/src/myapp
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY pipeline_executor.py .
 
-ENTRYPOINT ["python", "/workspace/pipeline_executor.py"]
+ENTRYPOINT ["python", "pipeline_executor.py"]
