--- a/Spotify-MLOps/builder_tool/Dockerfile
+++ b/Spotify-MLOps/builder_tool/Dockerfile
@@ -1,9 +1,13 @@
-FROM python:3.10-slim
-WORKDIR /usr/src/myapp
+# ---------- Base Image ----------
+FROM python:3.10.7-slim
 
-COPY requirements.txt .
+# ---------- Copy Files ----------
+# Copy the Python script into /home inside the container
+ADD pipeline_executor.py /home/pipeline_executor.py
+
+# Copy and install Python dependencies
+ADD requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY pipeline_executor.py .
-
-ENTRYPOINT ["python", "pipeline_executor.py"]
+# ---------- Entry Point ----------
+ENTRYPOINT ["python", "/home/pipeline_executor.py"]
